@@ -40,6 +40,8 @@ BEGIN {
       # otherwise we are good
                                                                                     : 0
     ,
+
+    ASSERT_NO_INTERNAL_WANTARRAY => $ENV{DBIC_ASSERT_NO_INTERNAL_WANTARRAY} ? 1 : 0,
   };
 
   if ($] < 5.009_005) {
